@@ -10,6 +10,7 @@ Zev Blut  http://www.iknow.co.jp/users/zev
 
 == contributors
 
+Kamal Fariz Mahyuddin  http://github.com/kamal
 Justin Reagor  http://blog.kineticweb.com/
 Benjami Yu  http://github.com/byu
 mebaran  http://github.com/mebaran
